# VidFlow

./: README.md  docker-compose.yml
deploy/: prometheus.yml
deploy/k8s/: deployment.yaml
video-platform-go/: README.md  go.mod  go.sum
video-platform-go/cmd/api-gateway/: main.go
video-platform-go/deployments/docker/: Dockerfile.api-gateway  config.yaml  docker-compose.yml
video-platform-go/internal/config/: config.go
video-platform-go/migrations/: 001_init_schema.down.sql  001_init_schema.up.sql
video-platform-go/pkg/errors/: errors.go
video-platform-go/pkg/hash/: hash.go
video-platform-go/pkg/jwt/: jwt.go
video-platform-go/pkg/logger/: logger.go
video-platform-go/pkg/response/: response.go
video-platform-java/: Dockerfile  README.md  pom.xml
video-platform-rust/: .env.example  Cargo.toml  Dockerfile  README.md
video-platform-rust/migrations/: 20240101000000_initial_schema.sql
video-platform-rust/src/: config.rs  db.rs  error.rs  main.rs  middleware.rs  redis.rs
video-platform-rust/src/handlers/: auth.rs  comments.rs  danmakus.rs  follows.rs  interactions.rs  metrics.rs  mod.rs  playback.rs  recommend.rs  search.rs  users.rs  videos.rs
video-platform-rust/src/middleware/: auth.rs  metrics.rs
video-platform-rust/src/models/: mod.rs  playback.rs  user.rs  video.rs
video-platform-rust/src/services/: auth.rs  mod.rs  video.rs
video-platform-rust/src/utils/: helpers.rs
video-platform-web/: Dockerfile  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
video-platform-web/.svelte-kit/: ambient.d.ts  tsconfig.json
video-platform-web/.svelte-kit/adapter-node/: manifest-full.js  manifest.js  remote-entry.js
video-platform-web/.svelte-kit/types/: route_meta_data.json
video-platform-web/src/: app.css
(+128 files in other folders)
