[package]
name = "video-platform-rust"
version = "1.0.0"
edition = "2021"
rust-version = "1.78"
authors = ["Video Platform Team"]
description = "Modern Video Platform with Rust"

[dependencies]
actix-web = "4.5"
actix-rt = "2.9"
actix-cors = "0.7"
actix-service = "2.0"
actix-http = "3.6"

tokio = { version = "1.37", features = ["full"] }
tokio-stream = "0.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

jsonwebtoken = "9.3"
argon2 = "0.5"
rand = "0.8"

chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }

config = "0.14"
dotenvy = "0.15"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"

prometheus = "0.13"
lazy_static = "1.4"

validator = { version = "0.18", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"

futures = "0.3"
async-trait = "0.1"
pin-project-lite = "0.2"

rdkafka = { version = "0.36", features = ["tokio"] }

object_store = { version = "0.9", features = ["aws"] }
aws-config = "1.4"
aws-sdk-s3 = "1.28"

opentelemetry = "0.22"
opentelemetry-otlp = "0.15"
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }
tracing-opentelemetry = "0.23"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["postgres", "redis"] }

[[bin]]
name = "video-platform-rust"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = 1
